[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nt2"
authors = [{name = "Andy Kluger"}]
dynamic = ["version", "description"]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["NestedText", "JSON", "YAML", "TOML"]
classifiers = [
    "Environment :: Console",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = ["cattrs", "nestedtext", "plumbum", "ruamel.yaml", "yamlpath==3.6.7"]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/andydecleyre/nt2"

[project.scripts]
nt2json = "nt2.ui:NestedTextToJSON"
nt2yaml = "nt2.ui:NestedTextToYAML"
nt2toml = "nt2.ui:NestedTextToTOML"
json2nt = "nt2.ui:JSONToNestedText"
yaml2nt = "nt2.ui:YAMLToNestedText"
toml2nt = "nt2.ui:TOMLToNestedText"

[project.optional-dependencies]
dev = ["black", "flit", "ipython", "isort", "nestedtext", "nox", "plumbum", "rich", "ruff", "ssort", "taskipy", "tomli", "tomli-w", "ward"]
test = ["nestedtext", "plumbum", "tomli", "tomli-w", "ward"]
toml = ["tomli", "tomli-w"]
fmt = ["black", "isort", "ruff", "ssort"]
test-without-toml = ["nestedtext", "plumbum", "ward"]

[tool.black]
line-length = 99
skip-magic-trailing-comma = true
skip-string-normalization = true

[tool.isort]
line_length = 99
balanced_wrapping = true
combine_as_imports = true
multi_line_output = 6
use_parentheses = true

[tool.ruff]
line-length = 99

[tool.taskipy.tasks]
fmt = "nox -s fmt"
lock = "nox -s lock"
install = "if [ $VIRTUAL_ENV ]; then pip install -r local-requirements.txt; else printf '%s\n' 'Please activate a venv first'; return 1; fi"
test = "nox -s test"

[tool.ward]
path = ["test"]
